fixed horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -207,9 +207,6 @@ body {
   }
 
   .contact-box {
-    /* width: 90%; */
-    /* max-width: 600px; */
-    /* height: 10%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -319,28 +316,44 @@ body {
   align-items: center;
   height: 50%;
   width: 90%;
-  gap: 30%;
+  gap: 20%;
   margin-top: 15%;
   margin-left: 10%;
   margin-right: 0px;
 }
 
 @media only screen and (max-width: 920px) {
+  html:not(.port), body{
+    max-width: 99%;
+    overflow-x: hidden;
+  }
+
   .div-container {
     display: grid;
     grid-template-columns: 1fr;
+    margin-left: -70px;
+    width: 120%;
   }
 
   .div1 {
     margin-left: 20%;
     margin-right: 25%;
+    gap: 1%;
   }
 
   .div2 {
-    margin-left: 25%;
+    margin-left: 29%;
     margin-right: 25%;
-    border: 2px rgb(37, 109, 203) solid;
+    border: 5px rgb(33,49,122) solid;
+    gap: 10%;
+    font-size: 2;
   }
+
+  .div2 ul{
+    margin-left: -13%;
+    font-size: 12px;
+  }
+  
 }
 
 .soft-skills-heading {
